# blendl

./: .gitignore  Cargo.toml  README.md  package.json
samples/tauri/: package.json
samples/tauri/src-tauri/: Cargo.toml  tauri.conf.json
workspaces/app/: Cargo.toml  package.json  tauri.conf.json
workspaces/app/src/: main.rs
workspaces/app/src/bl/: path.rs
workspaces/lib/ui/: package.json
workspaces/web/: package.json  tsconfig.json  vite.config.ts
workspaces/web/src/: index.css  index.tsx
workspaces/web/src/app/: App.css  App.tsx
workspaces/web/src/env/: tauri.d.ts
